# ARMGCCTemplate

./: CMakeLists.txt  README.md  arm-bare-metal.cmake  bootstrap.bat  bootstrap.sh
src/: main.cpp
